Use valueOf methods when converting primitive numbers to object.